--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,10 @@
     <string name="crearCliente">Crear cliente</string>
     <string name="consultaCliente">Consultar</string>
     <string name="crear">Crear</string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_cliente">Cliente</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
