--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_cliente">Cliente</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="chat">Mensajes</string>
 </resources>
